projeto finalizado, aguardando estilização

--- a/app/views/public_activity/team/_update.html.erb
+++ b/app/views/public_activity/team/_update.html.erb
@@ -1,5 +1,5 @@
 <li class="pv2 ph2 border-bottom">
-	<span class="icon is-small"><i class="fa fa-pencil-square-o"></i></span> created project
+	<span class="icon is-small"><i class="fa fa-refresh"></i></span> updated team
 	<% if activity.trackable %>
 		<%= link_to activity.trackable.name, activity.trackable %>
 	<% else %>
