--- a/app/views/home/_home.html.erb
+++ b/app/views/home/_home.html.erb
@@ -1,30 +1,30 @@
 <section class="hero is-link">
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <h1 class="title">
-        Welcome to Projekt
-      </h1>
-      <h2 class="subtitle">
-        A small project management app built with Ruby on Rails
-      </h2>
-    </div>
-  </div>
+	<div class="hero-body">
+		<div class="container has-text-centered">
+			<h1 class="title">
+				Bem vindo ao projeto estagiario anonimo
+			</h1>
+			<h2 class="subtitle">
+					Um pequeno projeto em ruby-on-rails !
+			</h2>
+		</div>
+	</div>
 </section>
 <section class="section">
-  <div class="container">
-    <div class="columns">
-      <div class="column is-7">
-        <div class="content">
-          <h3 class="title is-3">Why is Projekt so awesome?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quo voluptatibus blanditiis quis odit rerum error laudantium quidem, est tenetur dolorum mollitia, molestiae quibusdam ipsam vero autem modi et nobis.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, dignissimos nihil, impedit distinctio perspiciatis, soluta repellat expedita libero vitae ea debitis quae excepturi aperiam dolorem veritatis possimus, quos molestias molestiae.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A quaerat, tempore qui! Veniam sequi adipisci aliquam rerum, quas laborum expedita, illum repellendus sunt sit necessitatibus minus quo assumenda provident numquam.</p>
-        </div>
-      </div>
-      <div class="column is-4 is-offset1">
-        <h4 class="subtitle is-4">Sign Up Today</h4>
-        <%= link_to 'Sign Up', new_user_registration_path, class: 'button is-link is-outlined' %>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="columns">
+			<div class="column is-7">
+				<div class="content">
+					<h3 class="title is-3">Porque esse projeto tao bom?</h3>
+					<p>porque ele foi feito em Ruby</p>
+					<p>porque se nada der certo ele nao vai comprometer sua vida </p>
+					<p>porque ele e o começo de uma Nova Era</p>
+				</div>
+			</div>
+			<div class="column is-4 is-offset1">
+				<h4 class="subtitle is-4">Se registre Agora !!</h4>
+				<%= link_to 'Faça Parte', new_user_registration_path, class: 'button is-link is-outlined' %>
+			</div>
+		</div>
+	</div>
 </section>
